--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ python = "^3.10"
 Django = "^4.1.1"
 Pillow = "^9.2.0"
 requests = "^2.28.1"
-python-dotenv = "^0.21.0"
+python-dotenv = "^1.0.0"
+gunicorn = "^21.2.0"
 
 [tool.poetry.dev-dependencies]
 
